<resources>
    <string name="app_name">GIT Note Taking</string>
    <string name="action_settings">Settings</string>
    <string name="view_file_action_edit">Edit</string>
    <string name="view_file_action_save">Save</string>
    <string name="GitAuthorName">Name</string>
    <string name="GitAuthorEmail">Email</string>
    <string name="action_create_file">Create Text File</string>
    <string name="action_create_folder">Create Folder</string>
    <string name="action_delete">Delete</string>
    <string name="title_remove">Remove</string>
    <string name="message_remove">Remove Note (Y/N)?</string>
    <string name="title_push">Push Manually</string>
    <string name="title_pull">Pull Manually</string>
    <string name="action_cut">Cut</string>
    <string name="action_copy">Copy</string>
    <string name="action_paste">Paste</string>
    <string name="no_file_or_dir_selected">No file or directory be selected</string>
    <string name="modify_remote_settings_branches_fetched">new branches fetched</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_reset">Reset</string>


    // Preference
    <string name="GitEditTextSize">Notes Text Size</string>
    <string name="GitLocalDirName">Local Git directory(Backup first，rebuild all notes)</string>
    <string name="GitRemoteName">Remote GIT Branch</string>
    <string name="GitCheckBoxCommitMessage">Show Commit Dialog</string>


    // MainActivity
    <string name="tv_title_first_time">Starting</string>
    <string name="tv_first_time">Please Setup your name and email</string>
    <string name="action_clone">Clone Notes(Remote GIT)</string>
    <string name="action_create_local_git">Create Notes(local)</string>
    <string name="tv_localhost">Local</string>
    <string name="main_menu_add">Add</string>
    <string name="main_notes_need_push">(long click to push)</string>
    <string name="main_notes_cloning"> is cloning ...</string>
    <string name="main_notes_title_modify">Settings</string>
    <string name="main_notes_not_found">Notes not found!</string>
    <string name="main_notes_author_name">Name</string>
    <string name="main_notes_author_email">Email</string>
    <string name="main_notes_show_changelog">Show changelog</string>
    <string name="main_notes_show_all_remote_branches">Show remote branch</string>

    // FileExplorerActivity
    <string name="create_folder">Create Folder</string>
    <string name="create_file">Create File</string>
    <string name="select_file_or_directory">Select File or Directory</string>
    <string name="file_exists">File exists!</string>
    <string name="download_file_exists">File exists in Download Dir</string>
    <string name="download_success">Success Copy to Download dir</string>
    <string name="file_create_failed">File create failed!</string>
    <string name="file_add_external_file">Add File</string>
    <string name="file_filter_external_file">Search</string>

    // ViewFileActivity
    <string name="commit">Commit</string>
    <string name="commit_messages">Please input your  messages</string>
    <string name="view_attach_files"> attachment(s). Click to list files</string>
    <string name="view_title_remove_attach">Delete</string>
    <string name="view_remove_attach">Delete attach file</string>
    <string name="view_file_action_select_file">Add File From Storage</string>
    <string name="dialog_title_modify">Modify</string>
    <string name="dialog_file_name">File Name</string>
    <string name="view_file_delete_attachment_file_commit">delete : </string>
    <string name="view_file_paste_attachment_file_commit">paste files</string>
    <string name="view_file_add_attachment_file_commit">add file : </string>
    <string name="view_file_action_camera_picture">Take Photo From Camera</string>

    // GitCloneActivity
    // Layout
    <string name="tv_clone_git_repository">Clone GIT Repository</string>
    <string name="tv_remote_name">Branch</string>
    <string name="tv_remote_url">Remote GIT URL</string>
    <string name="tv_user_account">Account</string>
    <string name="tv_git_nick_name">Notes Name</string>
    <string name="tv_password">Password</string>
    <string name="tv_please_wait">Please wait! This may take a moment.</string>
    // activity
    <string name="tv_all_parametes_must_be_set">All Parametes must be set</string>
    <string name="tv_title_remote_git_clone">Remote Git Clone</string>
    <string name="tv_local_git_already_exists">Local Git Repository already exists</string>
    <string name="tv_clone_success">Clone Success!</string>
    <string name="tv_clone_fail">Clone Failed!</string>
    <string name="tv_git_already_cloned">Git already cloned</string>

    // CreateLocalGitActivity
    // layout
    <string name="tv_create_local_git_repository">Create Local GIT Repository</string>
    <string name="tv_local_git_name">GIT Name</string>
    // activity
    <string name="tv_title_create_local_git">Create Local GIT</string>
    <string name="tv_create_local_git_success">Create Local GIT success!</string>
    <string name="tv_create_local_git_fail">Create Local GIT failed!</string>
    <string name="dialog_title_add">Add File</string>
    <string name="title_search_text">Search</string>
    <string name="search_mode">Search Text</string>
    <string name="toast_pulling">Pulling Try later</string>
    <string name="toast_cloning">Cloning Try later</string>
    <string name="message_search_text">" "</string>
    <string name="attachment">File</string>
    <string name="refres_files">Refresh</string>
    <string name="GitShowAttachDir">Show Attachment Dir</string>
    <string name="textViewSearch">Search</string>
    <string name="pulling_success">Pull Success!</string>
    <string name="pulling_failed">Pull Failed!</string>
    <string name="pushing_success">Push Success!</string>
    <string name="pushing_failed">Push Failed!</string>
    <string name="Sort">FileSort</string>
    <string name="Sort11">DateAsc</string>
    <string name="download">download</string>
    <string name="Backup">Backup</string>
    <string name="backup_success">Backup to "Download" Success</string>
    <string name="backup_failed">Backup Failed</string>
    <string name="GitCloneSkipLocal">Skip git clone if local exists</string>


</resources>
