<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="inmethod.gitnotetaking.ViewFileActivity">

    <item
        android:id="@+id/view_file_action_edit"
        android:orderInCategory="100"
        android:title="@string/view_file_action_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/view_file_action_save"
        android:orderInCategory="101"
        android:title="@string/view_file_action_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/view_file_action_select_file"
        android:orderInCategory="102"
        android:title="@string/view_file_action_select_file"
        app:showAsAction="never" />

</menu>